fixed horizontal scroll

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,3 +41,6 @@
 .read-the-docs {
   color: #888;
 }
+body {
+  overflow-x: hidden;
+}
