--- a/client/src/style.css
+++ b/client/src/style.css
@@ -7,3 +7,7 @@
   font-style: normal;
   font-display: swap;
 }
+
+body {
+  overflow-x: hidden;
+}
